Scroll the place suggestions box so that the selected suggestion is always in view. Fixes browser not scrolling overflow:auto elements on keyboard up/down (Firefox/Chrome)

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -431,6 +431,10 @@
     transition: max-height .2s
     margin-bottom: .4em
     border: 1px solid $lightgrey
+    position: relative
+    
+    &:focus
+      border-color: $darkgrey
     
     &.open
       height: auto
